fixed navbar taking extra space

--- a/css/custom.css
+++ b/css/custom.css
@@ -202,12 +202,10 @@ html,body{
 	font-weight: normal;
 	font-size: 14px;
 }
-.footer-copyright{
-	box-sizing: border-box;
-	background-color: #041533;
-	padding: 5px 5px;
+.copyright{
+	background: #333;
 	text-align: center;
 	font-weight: bold;
-	font-size: 16px;
-	color: #c0c4c6;
+	color:white;
+	font-size: 15px;
 }
